syntax = "proto3";
package douyin.core;

option go_package = "pb/";
import "common.proto";
import "api.proto";

message douyin_comment_action_request {
  string token = 1; // 用户鉴权token
  int64 video_id = 2; // 视频id
  int32 action_type = 3; // 1-发布评论，2-删除评论
  string comment_text = 4; // 用户填写的评论内容，在action_type=1的时候使用
  int64 comment_id = 5; // 要删除的评论id，在action_type=2的时候使用
}

message douyin_comment_action_response {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
  Comment comment = 3; // 评论成功返回评论内容，不需要重新拉取整个列表
}

message douyin_comment_list_request {
  string token = 1 [(api.query) = "token"]; // 用户鉴权token
  int64 video_id = 2 [(api.query) = "video_id"]; // 视频id
}

message douyin_comment_list_response {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
  repeated Comment comment_list = 3; // 评论列表
}
